--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,6 +4,10 @@
     --font-color: #42567a;
     --violet-color: #5d5fef;
     --pink-color: #ef5da8;
+    --blue-color: #3877ee;
+
+    --circle-animation-duration: 0.8s;
+    --wrapper-padding-left: 80px;
 }
 
 html,
@@ -13,7 +17,7 @@ body {
 }
 
 body {
-    font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+    font-family: var(--font-pt-sans), Arial, Helvetica, sans-serif;
     color: var(--font-color);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -28,4 +32,27 @@ body {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+.swiper-button-disabled {
+    opacity: 0 !important;
+}
+
+.custom-bullet {
+    width: 6px !important;
+    height: 6px !important;
+    border-radius: 50% !important;
+    background: rgba(#42567a, 0.4) !important;
+}
+.swiper-pagination-bullet {
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: rgba(#42567a, 0.4);
+    opacity: 1;
+    margin: 0 !important;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background: var(--font-color) !important;
 }
