--- a/src/components/date-slider/styles.module.scss
+++ b/src/components/date-slider/styles.module.scss
@@ -1,8 +1,15 @@
 .slider {
-    padding: 5vw 0 5.4vh;
+    position: relative;
+    z-index: 1;
+    padding: 5vw 0 0;
 
     @media (min-width: 1920px) {
-        padding: 170px 0 104px;
+        padding: 170px 0 0;
+    }
+
+    @media (max-width: 768px) {
+        padding: 10.56vh 0 0;
+        margin: 0 20px 20px;
     }
 
     &__title {
@@ -11,9 +18,15 @@
         color: var(--font-color);
         line-height: 1.2;
         max-width: 18.2vw;
-        padding-left: 4.2vw;
         position: relative;
+        padding-left: var(--wrapper-padding-left);
         margin: 0 0 8.9vh;
+
+        @media (max-width: 768px) {
+            font-size: 20px;
+            margin-bottom: 10vh;
+            padding: 0;
+        }
 
         &::before {
             content: '';
@@ -23,12 +36,34 @@
             left: 0;
             top: 0;
             background: linear-gradient(to bottom, #3877ee, #ef5da8);
+
+            @media (max-width: 768px) {
+                display: none;
+            }
         }
     }
 
     &__wrapper {
-        width: fit-content;
-        margin: 0 auto;
+        position: relative;
+
+        @media (max-width: 768px) {
+            margin: 0;
+        }
+
+        &::after {
+            content: '';
+            height: 1px;
+            width: 100%;
+            background: var(--border-color);
+            position: absolute;
+            top: 50%;
+            left: 0;
+            z-index: 0;
+
+            @media (max-width: 768px) {
+                display: none;
+            }
+        }
     }
 
     &__content {
@@ -37,7 +72,15 @@
         font-size: 10.42vw;
         line-height: 1;
         font-weight: 700;
-        margin-bottom: 5vw;
+        position: relative;
+        z-index: 1;
+        width: fit-content;
+        margin: 0 auto 3vh;
+
+        @media (max-width: 768px) {
+            font-size: 56px;
+            margin: 0 0 24.65vh;
+        }
     }
 
     &__yearStart {
@@ -52,16 +95,40 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-        margin-left: 4.2vw;
+        padding-left: var(--wrapper-padding-left);
+
+        @media (max-width: 768px) {
+            position: fixed;
+            left: 20px;
+            bottom: 20px;
+            gap: 10px;
+            padding-left: 0;
+        }
     }
 
     &__buttons {
         display: flex;
         gap: 20px;
+
+        @media (max-width: 768px) {
+            gap: 8px;
+        }
     }
 
     &__counter {
         display: flex;
         font-size: 14px;
+    }
+
+    &__circleSlider {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 3;
+
+        @media (max-width: 768px) {
+            display: none;
+        }
     }
 }
